# esp32p4-AloT

./: .gitignore  CMakeLists.txt  ESP_SR_ISSUE_SUMMARY.md  IMPLEMENTATION_PLAN_UI_WIFI.md  README.md  sdkconfig  sdkconfig.defaults
cmake/: patch_managed_components.cmake
components/bsp_extra/: idf_component.yml
docs/: ESP32P4_SDIO_TOUCH_STABILITY.md
main/: CMakeLists.txt  Kconfig.projbuild  app_microphone.c  app_microphone.h  app_relay.c  app_relay.h  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h  idf_component.yml  main.c
main/ui/: ui.c  ui.h  ui_state.c  ui_state.h
main/ui/fonts/: ui_font_cn_16.c  ui_font_cn_16_symbols.txt
ui_mockups_lvgl/: 01_boot.html  02_home.html  03_control.html  04_env.html  05_scene.html  06_ai.html  07_settings.html  style.css
